cabal-version:      3.0
name:               abstract-ad
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             min-nguyen
maintainer:         minhnguyen1995@googlemail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable abstract-ad
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base >= 4.12 && < 4.17,
                    abstract-ad
  hs-source-dirs:
  default-language: Haskell2010

library
  hs-source-dirs:       src
  default-extensions:
  build-depends:        base >= 4.12 && < 4.17,
                        array,
                        containers,
                        erf,
                        math-functions,
                        mtl
  exposed-modules:      Documentation.AbstractAD,
                        Documentation.Symbolic,
                        Documentation.Forward,
                        Documentation.Reverse,
                        Example.ForwardAD,
                        Example.ReverseAD
  default-language:   Haskell2010